# picowota

./: CMakeLists.txt  LICENSE  README.md  bootloader.ld  bootloader_shell.ld  cat24c256_eeprom.c  combined.ld  creds.c  display_minimal.c  display_minimal.h  eeprom.c  eeprom.h  gen_imghdr.py  main.c  mkasm.py  standalone.ld  tcp_comm.c  tcp_comm.h  uc1701_display_minimal.c
picowota_reboot/: CMakeLists.txt  micropython.cmake  micropython.mk  reboot.c  reboot_mp.c
picowota_reboot/include/picowota/: reboot.h
